logs/django-ship.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_ship-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shipping'...
Compiling './lib/python3.5/site-packages/shipping/beautifulsoup.py'...
***   File "./lib/python3.5/site-packages/shipping/beautifulsoup.py", line 448
    raise AttributeError, "'%s' object has no attribute '%s'" % (self.__class__.__name__, attr)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shipping/core.py'...
***   File "./lib/python3.5/site-packages/shipping/core.py", line 74
    except urllib2.HTTPError,e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shipping/correios.py'...
***   File "./lib/python3.5/site-packages/shipping/correios.py", line 215
    print 'Resultados:'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/shipping/hooks.py'...
***   File "./lib/python3.5/site-packages/shipping/hooks.py", line 29
    except ImportError,e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shipping/migrations'...
Compiling './lib/python3.5/site-packages/shipping/tracking.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (tracking.py, line 79)
Listing './share'...
Listing './share/python-wheels'...
